# guitite

./: Cargo.toml  LICENCE  README.md
.zed/: settings.json
guitite-derive/: Cargo.toml
guitite-derive/src/: lib.rs
guitite-derive/src/utils/: attributes.rs  cheks.rs  impl_connect.rs  impl_disconnect.rs  impl_message.rs  mod.rs
src/: lib.rs  main.rs
src/structs/: conversor.rs  document_actor.rs  errors.rs  internal.rs  macros.rs  messages.rs  mod.rs  parser.rs  protocol.rs
src/structs/actors/: client.rs  mod.rs  relay.rs
src/structs/actors/server/: macros.rs  mod.rs  structs.rs
src/structs/actors/server/messages/: connect.rs  disconnect.rs  message.rs  mod.rs  response.rs
web/: README.md  guitite.ts  index.html  index_old.ts  main.ts  package.json  pnpm-lock.yaml  rolldown.config.js  tsconfig.json
web/example/: index.html  main.ts  package.json  pnpm-lock.yaml  styles.css
web/protocol/: conection.ts  protocol.ts  types.ts
web/src/: connection.ts  protocol.ts  types.ts
