[package]
name = "guitite"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["feraxhp <feraxhp+gh@gmail.com>"]
description = "A simple fast easy to use loro-sync-protocol build on top of actix"
homepage = "https://github.com/glifox/guitite"

[dependencies]
guitite-derive = { path = "./guitite-derive", version = "0.1.0" }
actix = "0.13.5"
actix-web = "4.12.1"
actix-web-actors = "4.3.1"
actix-ws = "0.3.1"
env_logger = "0.11.8"
log = "0.4.29"
loro = "1.10.3"
rand = "0.9.2"

[workspace]
members = ["./guitite-derive"]
