[package]
name = "guitite-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["feraxhp <feraxhp+gh@gmail.com>"]
description = "A simple fast easy to use loro-sync-protocol build on top of actix"
homepage = "https://github.com/glifox/guitite"

[dependencies]
loro = "1.10.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.115" }
deluxe = "0.5.0"
proc-macro-crate = "3.4.0"

[lib]
proc-macro = true
